--- a/css/18.css
+++ b/css/18.css
@@ -1,5 +1,19 @@
 .box {
-  width: 200px;
+  width: 400px;
   height: 200px;
-  background-color: hsl(325deg 99% 55%);
+  background: rgb(2,0,36);
+  background: linear-gradient(259deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 75%);
 }
+.box1 {
+  width: 400px;
+  height: 200px;
+  background: rgb(131,58,180);
+  background: linear-gradient(131deg, rgba(131,58,180,1) 22%, rgba(253,29,29,1) 92%);
+  }
+.box2 {
+  width: 400px;
+  height: 200px;
+  background: rgb(131,58,180);
+  background: rgb(255,255,255);
+  background: linear-gradient(257deg, rgba(255,255,255,1) 18%, rgba(45,94,253,1) 100%);
+  }
