--- a/css/22.css
+++ b/css/22.css
@@ -7,16 +7,23 @@ table {
   border-collapse: collapse;
 }
 
-td {
+table, td, th {
+  border: 1px solid #c4dcf3;
+  border-left: 0;
+  border-right: 0;
+}
+
+td, th {
   padding: 10px;
 }
+
 
 thead, tfoot {
   background-color: #427fef;
   color: white;
+  text-align: left;
 }
 
 tbody tr:nth-child(odd) {
   background-color: #eef7ff ;
 }
-
